dist/1.0/bin/sample/retrieveUnpackaged/objects/Request_Quotation__c.object
<CustomObject>
    <description>Request Quotation</description>
    <fields>
        <fullName>A_End_B__c</fullName>
        <description>A End</description>
        <inlineHelpText>A End</inlineHelpText>
        <label>A End</label>
        <referenceTo>AddressBook__c</referenceTo>
        <relationshipLabel>Requests Quotation (A End)</relationshipLabel>
        <relationshipName>R00N20000001RlVOEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account Name</description>
        <formula>Request__r.Account_N__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Account Name</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Technical_Specifications__c</fullName>
        <description>Additional Technical Specifications</description>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Additional Technical Specifications</inlineHelpText>
        <label>Additional Technical Specifications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_pricing_information__c</fullName>
        <description>Additional pricing information</description>
        <inlineHelpText>Additional pricing information</inlineHelpText>
        <label>Additional pricing information</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ask_forRQ__c</fullName>
        <description>Ask For (from Request)</description>
        <formula>Request__r.Ask_for_String__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ask For (from Request)</inlineHelpText>
        <label>Ask For</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_End__c</fullName>
        <description>B End</description>
        <inlineHelpText>B End</inlineHelpText>
        <label>B End</label>
        <referenceTo>AddressBook__c</referenceTo>
        <relationshipLabel>Requests Quotation</relationshipLabel>
        <relationshipName>R00N20000001ROQ0EAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BandWidthRQ__c</fullName>
        <description>BandWidth from Request</description>
        <formula>Request__r.BandWidthString__c +&apos;;&apos; + Request__r.Custom_Bandwidth__c + &apos; &apos;+ CASE( Request__r.Custom_Bandwidth_Unit__c,
&quot;Kbps&quot;,&quot;Kbps&quot;,
&quot;Mbps&quot;,&quot;Mbps&quot;,
&quot;Gbps&quot;,&quot;Gbps&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>BandWidth from Request</inlineHelpText>
        <label>BandWidth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPE__c</fullName>
        <description>CPE</description>
        <inlineHelpText>CPE</inlineHelpText>
        <label>CPE</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Circuit_ProtectionRQ__c</fullName>
        <description>Circuit Protection from Request</description>
        <formula>CASE( Request__r.Circuit_Protection__c , 
&quot;not protected&quot;,&quot;not protected&quot;, 
&quot;link protected&quot;,&quot;link protected&quot;, 
&quot;port protected (MSP1+1)&quot;,&quot;port protected (MSP1+1)&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Circuit Protection from Request</inlineHelpText>
        <label>Circuit Protection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Additional Comments</description>
        <inlineHelpText>Additional Comments</inlineHelpText>
        <label>Comment</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_B__c</fullName>
        <description>B-End Contact</description>
        <formula>B_End__r.Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>B-End Contact</inlineHelpText>
        <label>Contact B</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Volume_Limit__c</fullName>
        <description>Data Volume Limit from Request</description>
        <formula>CASE( Request__r.Data_Volume_Limit__c ,
&quot;50GB&quot;,&quot;50GB&quot;, 
&quot;100GB&quot;,&quot;100GB&quot;, 
&quot;200GB&quot;,&quot;200GB&quot;, 
&quot;300GB&quot;,&quot;300GB&quot;, 
&quot;500GB&quot;,&quot;500GB&quot;, 
&quot;1TB&quot;,&quot;1TB&quot;, 
&quot;2TB&quot;,&quot;2TB&quot;, 
&quot;5TB&quot;,&quot;5TB&quot;, 
&quot;10TB&quot;,&quot;10TB&quot;,
&quot;unlimited 10BaseT&quot;,&quot;unlimited 10BaseT&quot;,
&quot;unlimited 100BaseT&quot;,&quot;unlimited 100BaseT&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Data Volume Limit from Request</inlineHelpText>
        <label>Data Volume Limit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <description>Delivery</description>
        <inlineHelpText>Delivery</inlineHelpText>
        <label>Delivery</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 2 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - 5 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 6 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - 8 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 -11 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - 14 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 - 17 weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 - 20 weeks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_mediumRQ__c</fullName>
        <description>Expected medium from Request</description>
        <formula>Request__r.Expected_medium_text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected medium from Request</inlineHelpText>
        <label>Expected medium</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Contact__c</fullName>
        <description>Contact person (contact assigned to account) for External Request Quotation, who should receive automatic email to prepare a quotation</description>
        <inlineHelpText>Choose external contact who should receive automatic email to prepare a quotation</inlineHelpText>
        <label>External Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requests Quotation</relationshipLabel>
        <relationshipName>R00N20000001ReKQEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <description>Number of IP address from Request</description>
        <formula>Request__r.IP_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of IP address from Request</inlineHelpText>
        <label>Number of IP address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Traffic_Distribution__c</fullName>
        <description>Distribution of IP Traffic (world/local)</description>
        <formula>CASE(Request__r.IP_Traffic_Distribution__c,
&quot;0/100&quot;,&quot;0/100&quot;,
&quot;10/90&quot;,&quot;10/90&quot;,
&quot;20/80&quot;,&quot;20/80&quot;,
&quot;30/70&quot;,&quot;30/70&quot;,
&quot;40/60&quot;,&quot;40/60&quot;,
&quot;50/50&quot;,&quot;50/50&quot;,
&quot;60/40&quot;,&quot;60/40&quot;,
&quot;70/30&quot;,&quot;70/30&quot;,
&quot;80/20&quot;,&quot;80/20&quot;,
&quot;90/10&quot;,&quot;90/10&quot;,
&quot;100/10&quot;,&quot;100/10&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Distribution of IP Traffic (world/local)</inlineHelpText>
        <label>Distribution of IP Traffic (world/local)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Type__c</fullName>
        <description>Installation Type</description>
        <formula>CASE( Request__r.Installation_Type__c ,
&quot;Rack 1/1&quot;,&quot;Rack 1/1&quot;,
&quot;Rack 1/2&quot;,&quot;Rack 1/2&quot;,
&quot;Rack 1/3&quot;,&quot;Rack 1/3&quot;,
&quot;Rack 1/4&quot;,&quot;Rack 1/4&quot;,
&quot;Standalone&quot;,&quot;Standalone&quot;,
&quot;Cage&quot;,&quot;Cage&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Installation Type</inlineHelpText>
        <label>Installation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Contact__c</fullName>
        <description>Contact person (system user) for Internal Request Quotation, who should receive automatic task to prepare a quotation.</description>
        <inlineHelpText>Choose system user who should receive automatic task to prepare a quotation</inlineHelpText>
        <label>Internal Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N20000001ReJDEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this Request Quotation is a cloned from another one</description>
        <inlineHelpText>Technical Field</inlineHelpText>
        <label>IsCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Port_Type__c</fullName>
        <description>Line/Port Type from Request</description>
        <formula>CASE(Request__r.Line_Port_Type__c,
&quot;10BaseT&quot;,&quot;10BaseT&quot;,
&quot;100BaseT&quot;,&quot;100BaseT&quot;,
&quot;1000BaseT&quot;,&quot;1000BaseT&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Line/Port Type from Request</inlineHelpText>
        <label>Line/Port Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logical_interfaceRQ__c</fullName>
        <description>Logical interface from Request</description>
        <formula>CASE( Request__r.Logical_interface__c , 
&quot;X.21&quot;,&quot;X.21&quot;, 
&quot;V.35&quot;,&quot;V.35&quot;, 
&quot;G.703PDH&quot;,&quot;G.703PDH&quot;, 
&quot;G.703SDH electrical(STM1e)&quot;,&quot;G.703SDH electrical(STM1e)&quot;, 
&quot;G.957SDH optical(STM1o)&quot;,&quot;G.957SDH optical(STM1o)&quot;, 
&quot;G.957SDH optical(STM4o)&quot;,&quot;G.957SDH optical(STM4o)&quot;, 
&quot;G.957SDH optical(STM16o)&quot;,&quot;G.957SDH optical(STM16o)&quot;, 
&quot;100Base-T&quot;,&quot;100Base-T&quot;, 
&quot;1000Base-LX&quot;,&quot;1000Base-LX&quot;, 
&quot;1000Base-SX&quot;,&quot;1000Base-SX&quot;, 
&quot;10GE&quot;,&quot;10GE&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logical interface from Request</inlineHelpText>
        <label>Logical interface</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <description>Medium</description>
        <inlineHelpText>Medium</inlineHelpText>
        <label>Medium</label>
        <picklist>
            <picklistValues>
                <fullName>Copper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fibre optic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microwave</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>No_of_CircuitsRQ__c</fullName>
        <description>No of Circuits from Request</description>
        <formula>Request__r.No_of_Circuits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>No of Circuits from Request</inlineHelpText>
        <label>No of Circuits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Access_Keys__c</fullName>
        <description>Number of Access Keys from Request</description>
        <formula>CASE( Request__r.Number_of_Access_Keys__c ,
&quot;0&quot;,&quot;0&quot;,
&quot;1&quot;,&quot;1&quot;,
&quot;2&quot;,&quot;2&quot;,
&quot;3&quot;,&quot;3&quot;,
&quot;4&quot;,&quot;4&quot;,
&quot;5&quot;,&quot;5&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Access Keys from Request</inlineHelpText>
        <label>Number of Access Keys</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Ethernet_Ports__c</fullName>
        <description>Number of Ethernet Ports from Request</description>
        <formula>CASE( Request__r.Number_of_Ethernet_Ports__c ,
&quot;0&quot;,&quot;0&quot;,
&quot;1&quot;,&quot;1&quot;,
&quot;2&quot;,&quot;2&quot;,
&quot;3&quot;,&quot;3&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Ethernet Ports from Request</inlineHelpText>
        <label>Number of Ethernet Ports</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <description>Offer type</description>
        <inlineHelpText>Offer type</inlineHelpText>
        <label>Offer</label>
        <picklist>
            <picklistValues>
                <fullName>Budgetary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_No_on_RQ__c</fullName>
        <description>Value of Opportunity Number on Request Quotation for Reporting purposes.</description>
        <formula>Opportunity__r.Oppty_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Technical field for reporting</inlineHelpText>
        <label>Opportunity No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Related opportunity, should be assigned automatically when creating budgetary proposal or firm proposal</description>
        <inlineHelpText>Related opportunity, should be assigned automatically when creating budgetary proposal or firm proposal</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Requests Quotation</relationshipLabel>
        <relationshipName>R00N20000001RPKyEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_B__c</fullName>
        <description>B-End Phone</description>
        <formula>B_End__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>B-End Phone</inlineHelpText>
        <label>Phone B</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Access__c</fullName>
        <description>Physical Access from Request</description>
        <formula>CASE( Request__r.Physical_Access__c ,
&quot;Standard&quot;,&quot;Standard&quot;,
&quot;24/7/365&quot;,&quot;24/7/365&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Physical Access from Request</inlineHelpText>
        <label>Physical Access</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_interfaceRQ__c</fullName>
        <description>Physical interface from Request</description>
        <formula>CASE( Request__r.Physical_interface__c , 
&quot;M-34F&quot;,&quot;M-34F&quot;, 
&quot;RJ-45F&quot;,&quot;RJ-45F&quot;, 
&quot;DB-15F&quot;,&quot;DB-15F&quot;, 
&quot;DB-25F&quot;,&quot;DB-25F&quot;, 
&quot;BNC 75Ohm&quot;,&quot;BNC 75Ohm&quot;, 
&quot;FC/PC&quot;,&quot;FC/PC&quot;, 
&quot;SC/PC&quot;,&quot;SC/PC&quot;, 
&quot;LC/PC&quot;,&quot;LC/PC&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Physical interface from Request</inlineHelpText>
        <label>Physical interface</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>Position from Request</description>
        <formula>Request__r.Position__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Position from Request</inlineHelpText>
        <label>Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_Supply__c</fullName>
        <description>Power Supply from Request</description>
        <formula>CASE( Request__r.Power_Supply__c ,
&quot;230 VAC&quot;,&quot;230 VAC&quot;,
&quot;48 VDC&quot;,&quot;48 VDC&quot;,
&quot;both&quot;,&quot;both&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power Supply from Request</inlineHelpText>
        <label>Power Supply</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductRQ__c</fullName>
        <description>Link to Request Quotation</description>
        <formula>HYPERLINK(&quot;/&quot; +Request__r.Product__r.Id , Request__r.Product__r.Name , &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Request Quotation</inlineHelpText>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_Type__c</fullName>
        <description>Quotation Type</description>
        <inlineHelpText>Quotation Type</inlineHelpText>
        <label>Quotation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rack_Nr__c</fullName>
        <description>Number of Racks from Request</description>
        <formula>Request__r.Rack_Nr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Racks from Request</inlineHelpText>
        <label>Number of Racks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RelatedTaskId__c</fullName>
        <description>Related Task ID</description>
        <inlineHelpText>Technical field</inlineHelpText>
        <label>RelatedTaskId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Stage_on_RQ__c</fullName>
        <description>Value of Request Stage on Request Quotation for Reporting purposes.</description>
        <formula>CASE( Request__r.Request_Status__c,
&apos;Budgetary Quotation&apos;,&apos;Budgetary Quotation&apos;,
&apos;Completed&apos;,&apos;Completed&apos;,
&apos;Firm Quotation&apos;,&apos;Firm Quotation&apos;,
&apos;Invoicing&apos;,&apos;Invoicing&apos;,
&apos;New&apos;,&apos;New&apos;,
&apos;Order&apos;,&apos;Order&apos;,
&apos;Provisioning&apos;,&apos;Provisioning&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Technical field for reporting</inlineHelpText>
        <label>Request Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status_on_RQ__c</fullName>
        <description>Value of Request Status on Request Quotation for Reporting purposes.</description>
        <formula>CASE( Request__r.Field_Status_ST__c,
&apos;Accepted&apos;,&apos;Accepted&apos;,
&apos;Customer written confirmation&apos;,&apos;Customer written confirmation&apos;,
&apos;Disqualified&apos;,&apos;Disqualified&apos;,
&apos;Entered into Provisioning&apos;,&apos;Entered into Provisioning&apos;,
&apos;Failed&apos;,&apos;Failed&apos;,
&apos;GTS written confirmation&apos;,&apos;GTS written confirmation&apos;,
&apos;Pending&apos;,&apos;Pending&apos;,
&apos;Rejected&apos;,&apos;Rejected&apos;,
&apos;Requested&apos;,&apos;Requested&apos;,
&apos;Submitted&apos;,&apos;Submitted&apos;,
&apos;Succeded&apos;,&apos;Succeded&apos;,
&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Technical field for reporting</inlineHelpText>
        <label>Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>Request Number</description>
        <inlineHelpText>Request Number</inlineHelpText>
        <label>Request No</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Requests Quotation</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Router__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if router was selected</description>
        <inlineHelpText>Indicates if router was selected</inlineHelpText>
        <label>Router</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA_Level__c</fullName>
        <description>SLA Level</description>
        <formula>CASE( Request__r.SLA_Level__c ,
&quot;Standard&quot;,&quot;Standard&quot;,
&quot;Plus&quot;,&quot;Plus&quot;,
&quot;Top&quot;,&quot;Top&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SLA Level</inlineHelpText>
        <label>SLA Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendEmail__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Send Email</description>
        <inlineHelpText>Send Email</inlineHelpText>
        <label>SendEmail</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Request Quotation&apos;s status</description>
        <inlineHelpText>Request Quotation&apos;s status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TechnologyRQ_c__c</fullName>
        <description>Technology from Request</description>
        <formula>CASE( Request__r.Technology__c ,&quot;DSL (Attach DSL Order Form)&quot;,&quot;DSL (Attach DSL Order Form)&quot;,&quot;Leased Line&quot;,&quot;Leased Line&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Technology from Request</inlineHelpText>
        <label>Technology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Validity date for this Request Quotation</description>
        <inlineHelpText>Validity date for this Request Quotation</inlineHelpText>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Request Quotation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Request__c</columns>
        <columns>Account_Name__c</columns>
        <columns>B_End__c</columns>
        <columns>Contact_B__c</columns>
        <columns>Phone_B__c</columns>
        <columns>Offer__c</columns>
        <columns>Quotation_Type__c</columns>
        <columns>Internal_Contact__c</columns>
        <columns>External_Contact__c</columns>
        <columns>Valid_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Quotations</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Request__c</columns>
        <columns>Request_Stage_on_RQ__c</columns>
        <columns>Request_Status_on_RQ__c</columns>
        <columns>Ask_forRQ__c</columns>
        <columns>BandWidthRQ__c</columns>
        <columns>Internal_Contact__c</columns>
        <columns>External_Contact__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Request_Stage_on_RQ__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Request_Stage_on_RQ__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>7/1/2009 12:00 AM</value>
        </filters>
        <label>All Open Quotations</label>
    </listViews>
    <listViews>
        <fullName>All_Pricings</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Request__c</columns>
        <columns>Opportunity_No_on_RQ__c</columns>
        <columns>Account_Name__c</columns>
        <columns>B_End__c</columns>
        <columns>Contact_B__c</columns>
        <columns>Phone_B__c</columns>
        <columns>Offer__c</columns>
        <columns>Quotation_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Valid_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quotation_Type__c</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filters>
        <filters>
            <field>Quotation_Type__c</field>
            <operation>equals</operation>
            <value>External</value>
        </filters>
        <label>All Pricings</label>
    </listViews>
    <listViews>
        <fullName>All_Proposals</fullName>
        <columns>NAME</columns>
        <columns>Request__c</columns>
        <columns>Opportunity_No_on_RQ__c</columns>
        <columns>Account_Name__c</columns>
        <columns>B_End__c</columns>
        <columns>Contact_B__c</columns>
        <columns>Phone_B__c</columns>
        <columns>Offer__c</columns>
        <columns>Quotation_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Valid_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quotation_Type__c</field>
            <operation>equals</operation>
            <value>Proposal</value>
        </filters>
        <label>All Proposals</label>
    </listViews>
    <listViews>
        <fullName>My_request_quotations</fullName>
        <columns>NAME</columns>
        <columns>Request__c</columns>
        <columns>B_End__c</columns>
        <columns>Offer__c</columns>
        <columns>Quotation_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Valid_To__c</columns>
        <columns>Internal_Contact__c</columns>
        <columns>External_Contact__c</columns>
        <filterScope>Mine</filterScope>
        <label>My request quotations</label>
    </listViews>
    <nameField>
        <displayFormat>RQO{000000000}</displayFormat>
        <label>Request Quotation No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests Quotation</pluralLabel>
    <recordTypes>
        <fullName>Colocation</fullName>
        <active>true</active>
        <description>Record type only for Colocation wholesale product</description>
        <label>Colocation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Product</fullName>
        <active>true</active>
        <description>Record type for other wholesale products</description>
        <label>Other Product</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>